# mvcMouseTrackCollect

./: .gitignore  CMakeLists.txt  CMakePresets.json  DataManager.cpp  DataManager.h  MainController.cpp  MainController.h  MainWindow.cpp  MainWindow.h  MouseController.cpp  MouseMoveData.xml  MouseWidget.cpp  MouseWidget.h  SettingsController.cpp  SettingsController.h  SettingsWidget.h  TransformaController.cpp  TransformaController.h  combined_output.txt  datamanager.cpp  datamanager.h  main.cpp  maincontroller.cpp  maincontroller.h  mainwindow.cpp  mainwindow.h  mousewidget.cpp  mousewidget.h  mvcMouseTrackCollect.pro  settingscontroller.cpp  settingscontroller.h  settingswidget.cpp  settingswidget.h
InputEmulator/: ArduinoCommand.cpp  ArduinoCommand.h
Main/: MainController.cpp  MainController.h  MainWindow.cpp  MainWindow.h
Mouse/: MouseController.cpp  MouseController.h  MouseWidget.cpp  MouseWidget.h
Result/: GenerateNewMouseTrack.h  generatenewmousetrack.cpp
ScreenCapture/: ImageAnalyzer.cpp  ImageAnalyzer.h  ScreenCapturer.cpp  ScreenCapturer.h
Selection/: SettingsController.cpp  SettingsController.h  SettingsModel.cpp  SettingsModel.h  SettingsWidget.cpp  SettingsWidget.h
debug/: Makefile  Makefile.Debug  Makefile.Release
debug/debug/: moc_ArduinoCommand.cpp  moc_MainController.cpp  moc_MainWindow.cpp  moc_MouseController.cpp  moc_MouseWidget.cpp  moc_SettingsController.cpp  moc_SettingsWidget.cpp  object_script.mvcMouseTrackCollect.Debug  qrc_qmake_qmake_qm_files.cpp
debug/release/: object_script.mvcMouseTrackCollect.Release
